// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dva přihlášení 1`] = `
<div
  className="PrihlaseniDohlaseni__div UcastniciTable_container"
>
  <div
    className="PrihlaseniDohlaseni__filters"
  >
    <span
      className="PrihlaseniDohlaseniFilter Bootstrap-buttons--active"
    >
      <button
        className="btn btn-primary active"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Přihlášeni
         
      </button>
    </span>
    <span
      className="PrihlaseniDohlaseniFilter Bootstrap-buttons--active"
    >
      <button
        className="btn btn-success"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Dohlášeni
         
      </button>
    </span>
    <div>
      <input
        className="TextFilter__input"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Filtr na příjmení a jméno"
        type="text"
        value=""
      />
      <div
        className="Filterable__kategorie btn-group"
      >
        <span
          className="KategorieFilter Bootstrap-buttons--active"
        >
          <button
            className="KategorieFilter--maraton--inactive btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span>
              <img
                alt="maraton"
                height={30}
                src="maraton.png"
                title="maraton"
              />
               
              maraton
            </span>
          </button>
        </span>
        <span
          className="KategorieFilter Bootstrap-buttons--active"
        >
          <button
            className="KategorieFilter--půlmaraton--inactive btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span>
              <img
                alt="půlmaraton"
                height={30}
                src="pulmaraton.png"
                title="půlmaraton"
              />
               
              půlmaraton
            </span>
          </button>
        </span>
        <span
          className="KategorieFilter Bootstrap-buttons--active"
        >
          <button
            className="KategorieFilter--cyklo--inactive btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span>
              <img
                alt="cyklo"
                height={30}
                src="cyklo.png"
                title="cyklo"
              />
               
              cyklo
            </span>
          </button>
        </span>
        <span
          className="KategorieFilter Bootstrap-buttons--active"
        >
          <button
            className="KategorieFilter--koloběžka--inactive btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span>
              <img
                alt="koloběžka"
                height={30}
                src="kolobezka.png"
                title="koloběžka"
              />
               
              koloběžka
            </span>
          </button>
        </span>
        <span
          className="KategorieFilter Bootstrap-buttons--active"
        >
          <button
            className="KategorieFilter--pěší--inactive btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span>
              <img
                alt="pěší"
                height={30}
                src="pesi.png"
                title="pěší"
              />
               
              pěší
            </span>
          </button>
        </span>
      </div>
      <span
        className="Zobrazeno"
      >
        zobrazeno: 
        <span
          className="badge"
        >
          2
        </span>
      </span>
    </div>
  </div>
  <div
    className="withResponsive"
  >
    <div
      className="UcastniciTable_GridRow"
    >
      <div
        className="UcastniciTable_LeftSideGridContainer"
        style={
          Object {
            "flexBasis": "290px",
            "top": 0,
          }
        }
      >
        <div
          aria-label="grid"
          aria-readonly={true}
          className="ReactVirtualized__Grid UcastniciTable_HeaderGrid"
          id={undefined}
          onScroll={[Function]}
          role="grid"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": 35,
              "overflowX": "hidden",
              "overflowY": "hidden",
              "position": "relative",
              "width": 290,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        >
          <div
            className="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style={
              Object {
                "height": 35,
                "maxHeight": 35,
                "maxWidth": 290,
                "overflow": "hidden",
                "pointerEvents": "",
                "position": "relative",
                "width": 290,
              }
            }
          >
            <div
              className="UcastniciTable_headerCell"
              style={
                Object {
                  "height": 35,
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": 100,
                }
              }
            >
              <a
                className="SortHeader_a"
                onClick={[Function]}
              >
                příjmení
                 
                
              </a>
            </div>
            <div
              className="UcastniciTable_headerCell"
              style={
                Object {
                  "height": 35,
                  "left": 100,
                  "position": "absolute",
                  "top": 0,
                  "width": 90,
                }
              }
            >
              <a
                className="SortHeader_a"
                onClick={[Function]}
              >
                jméno
                 
                
              </a>
            </div>
            <div
              className="UcastniciTable_headerCell"
              style={
                Object {
                  "height": 35,
                  "left": 190,
                  "position": "absolute",
                  "top": 0,
                  "width": 100,
                }
              }
            >
              <a
                className="SortHeader_a"
                onClick={[Function]}
              >
                narození
                 
                
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        className="UcastniciTable_LeftSideGridContainer"
        style={
          Object {
            "flexBasis": "290px",
            "top": 35,
          }
        }
      >
        <div
          aria-label="grid"
          aria-readonly={true}
          className="ReactVirtualized__Grid UcastniciTable_LeftSideGrid"
          id={undefined}
          onScroll={[Function]}
          role="grid"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": 70,
              "overflowX": "hidden",
              "overflowY": "hidden",
              "position": "relative",
              "width": 290,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        >
          <div
            className="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style={
              Object {
                "height": 70,
                "maxHeight": 70,
                "maxWidth": 290,
                "overflow": "hidden",
                "pointerEvents": "",
                "position": "relative",
                "width": 290,
              }
            }
          >
            <div
              className="align-left UcastniciTable_oddRow UcastniciTable_cell"
              style={
                Object {
                  "height": 35,
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": 100,
                }
              }
            >
              <a
                href="/prihlasky/5a09b1fd371dec1e99b7e1c9"
                onClick={[Function]}
              >
                Balabák
              </a>
            </div>
            <div
              className="align-left UcastniciTable_oddRow UcastniciTable_cell"
              style={
                Object {
                  "height": 35,
                  "left": 100,
                  "position": "absolute",
                  "top": 0,
                  "width": 90,
                }
              }
            >
              Roman
            </div>
            <div
              className="align-right UcastniciTable_oddRow UcastniciTable_cell"
              style={
                Object {
                  "height": 35,
                  "left": 190,
                  "position": "absolute",
                  "top": 0,
                  "width": 100,
                }
              }
            >
              1956
            </div>
            <div
              className="align-left UcastniciTable_evenRow UcastniciTable_cell"
              style={
                Object {
                  "height": 35,
                  "left": 0,
                  "position": "absolute",
                  "top": 35,
                  "width": 100,
                }
              }
            >
              <a
                href="/prihlasky/7a09b1fd371dec1e99b7e142"
                onClick={[Function]}
              >
                Zralá
              </a>
            </div>
            <div
              className="align-left UcastniciTable_evenRow UcastniciTable_cell"
              style={
                Object {
                  "height": 35,
                  "left": 100,
                  "position": "absolute",
                  "top": 35,
                  "width": 90,
                }
              }
            >
              Hana
            </div>
            <div
              className="align-right UcastniciTable_evenRow UcastniciTable_cell"
              style={
                Object {
                  "height": 35,
                  "left": 190,
                  "position": "absolute",
                  "top": 35,
                  "width": 100,
                }
              }
            >
              25. 7. 1999
            </div>
          </div>
        </div>
      </div>
      <div
        className="UcastniciTable_GridColumn"
      >
        <div>
          <div
            style={
              Object {
                "height": 35,
                "width": 910,
              }
            }
          >
            <div
              aria-label="grid"
              aria-readonly={true}
              className="ReactVirtualized__Grid UcastniciTable_HeaderGrid"
              id={undefined}
              onScroll={[Function]}
              role="grid"
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "boxSizing": "border-box",
                  "direction": "ltr",
                  "height": 35,
                  "overflowX": "hidden",
                  "overflowY": "hidden",
                  "position": "relative",
                  "width": 1200,
                  "willChange": "transform",
                }
              }
              tabIndex={0}
            >
              <div
                className="ReactVirtualized__Grid__innerScrollContainer"
                role="rowgroup"
                style={
                  Object {
                    "height": 35,
                    "maxHeight": 35,
                    "maxWidth": 1200,
                    "overflow": "hidden",
                    "pointerEvents": "",
                    "position": "relative",
                    "width": 1200,
                  }
                }
              >
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 290,
                      "position": "absolute",
                      "top": 0,
                      "width": 90,
                    }
                  }
                >
                  <a
                    className="SortHeader_a"
                    onClick={[Function]}
                  >
                    obec
                     
                    
                  </a>
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 380,
                      "position": "absolute",
                      "top": 0,
                      "width": 200,
                    }
                  }
                >
                  <a
                    className="SortHeader_a"
                    onClick={[Function]}
                  >
                    email
                     
                    
                  </a>
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 580,
                      "position": "absolute",
                      "top": 0,
                      "width": 110,
                    }
                  }
                >
                  <a
                    className="SortHeader_a"
                    onClick={[Function]}
                  >
                    přihlášení
                     
                    
                  </a>
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 690,
                      "position": "absolute",
                      "top": 0,
                      "width": 200,
                    }
                  }
                >
                  <a
                    className="SortHeader_a"
                    onClick={[Function]}
                  >
                    kategorie
                     
                    
                  </a>
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 890,
                      "position": "absolute",
                      "top": 0,
                      "width": 60,
                    }
                  }
                >
                  <a
                    className="SortHeader_a"
                    onClick={[Function]}
                  >
                    číslo
                     
                    
                  </a>
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 950,
                      "position": "absolute",
                      "top": 0,
                      "width": 150,
                    }
                  }
                >
                  kód
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 1100,
                      "position": "absolute",
                      "top": 0,
                      "width": 100,
                    }
                  }
                >
                  <a
                    className="SortHeader_a"
                    onClick={[Function]}
                  >
                    zaplaceno
                     
                    
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "height": 70,
                "width": 1200,
              }
            }
          >
            <div
              aria-label="grid"
              aria-readonly={true}
              className="ReactVirtualized__Grid UcastniciTable_BodyGrid"
              id={undefined}
              onScroll={[Function]}
              role="grid"
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "boxSizing": "border-box",
                  "direction": "ltr",
                  "height": 70,
                  "overflowX": "hidden",
                  "overflowY": "hidden",
                  "position": "relative",
                  "width": 1200,
                  "willChange": "transform",
                }
              }
              tabIndex={0}
            >
              <div
                className="ReactVirtualized__Grid__innerScrollContainer"
                role="rowgroup"
                style={
                  Object {
                    "height": 70,
                    "maxHeight": 70,
                    "maxWidth": 1200,
                    "overflow": "hidden",
                    "pointerEvents": "",
                    "position": "relative",
                    "width": 1200,
                  }
                }
              >
                <div
                  className="align-left UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 290,
                      "position": "absolute",
                      "top": 0,
                      "width": 90,
                    }
                  }
                >
                  Ostrava 2
                </div>
                <div
                  className="align-left UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 380,
                      "position": "absolute",
                      "top": 0,
                      "width": 200,
                    }
                  }
                />
                <div
                  className="align-right UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 580,
                      "position": "absolute",
                      "top": 0,
                      "width": 110,
                    }
                  }
                >
                  9. 6. 2018
                </div>
                <div
                  className="align-left PrihlaseniDohlaseni--půlmaraton UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 690,
                      "position": "absolute",
                      "top": 0,
                      "width": 200,
                    }
                  }
                >
                  <span>
                    <img
                      alt="půlmaraton"
                      height={30}
                      src="pulmaraton.png"
                      title="půlmaraton"
                    />
                     
                    <img
                      alt="muž"
                      height={28}
                      src="muz.png"
                      title="muž"
                    />
                    60 let a více
                  </span>
                </div>
                <div
                  className="align-right UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 890,
                      "position": "absolute",
                      "top": 0,
                      "width": 60,
                    }
                  }
                >
                  17
                </div>
                <div
                  className="align-left monospace UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 950,
                      "position": "absolute",
                      "top": 0,
                      "width": 150,
                    }
                  }
                >
                  10728864
                </div>
                <div
                  className="PrihlaseniDohlaseni--zaplaceno UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 1100,
                      "position": "absolute",
                      "top": 0,
                      "width": 100,
                    }
                  }
                >
                  250 Kč
                </div>
                <div
                  className="align-left UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 290,
                      "position": "absolute",
                      "top": 35,
                      "width": 90,
                    }
                  }
                >
                  Bučovice
                </div>
                <div
                  className="align-left UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 380,
                      "position": "absolute",
                      "top": 35,
                      "width": 200,
                    }
                  }
                />
                <div
                  className="align-right UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 580,
                      "position": "absolute",
                      "top": 35,
                      "width": 110,
                    }
                  }
                >
                  9. 6. 2018
                </div>
                <div
                  className="align-left PrihlaseniDohlaseni--půlmaraton UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 690,
                      "position": "absolute",
                      "top": 35,
                      "width": 200,
                    }
                  }
                >
                  <span>
                    <img
                      alt="půlmaraton"
                      height={30}
                      src="pulmaraton.png"
                      title="půlmaraton"
                    />
                     
                    <img
                      alt="žena"
                      height={28}
                      src="zena.png"
                      title="žena"
                    />
                    18 - 39 let
                  </span>
                </div>
                <div
                  className="align-right UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 890,
                      "position": "absolute",
                      "top": 35,
                      "width": 60,
                    }
                  }
                >
                  10
                </div>
                <div
                  className="align-left monospace UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 950,
                      "position": "absolute",
                      "top": 35,
                      "width": 150,
                    }
                  }
                >
                  abc023skd204mvs345
                </div>
                <div
                  className="PrihlaseniDohlaseni--castecne-zaplaceno UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 1100,
                      "position": "absolute",
                      "top": 35,
                      "width": 100,
                    }
                  }
                >
                  100 Kč
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`žádný přihlášený 1`] = `
<div
  className="PrihlaseniDohlaseni__div UcastniciTable_container"
>
  <div
    className="PrihlaseniDohlaseni__filters"
  >
    <span
      className="PrihlaseniDohlaseniFilter Bootstrap-buttons--active"
    >
      <button
        className="btn btn-primary active"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Přihlášeni
         
      </button>
    </span>
    <span
      className="PrihlaseniDohlaseniFilter Bootstrap-buttons--active"
    >
      <button
        className="btn btn-success"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Dohlášeni
         
      </button>
    </span>
    <div>
      <input
        className="TextFilter__input"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Filtr na příjmení a jméno"
        type="text"
        value=""
      />
      <div
        className="Filterable__kategorie btn-group"
      >
        <span
          className="KategorieFilter Bootstrap-buttons--active"
        >
          <button
            className="KategorieFilter--maraton--inactive btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span>
              <img
                alt="maraton"
                height={30}
                src="maraton.png"
                title="maraton"
              />
               
              maraton
            </span>
          </button>
        </span>
        <span
          className="KategorieFilter Bootstrap-buttons--active"
        >
          <button
            className="KategorieFilter--půlmaraton--inactive btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span>
              <img
                alt="půlmaraton"
                height={30}
                src="pulmaraton.png"
                title="půlmaraton"
              />
               
              půlmaraton
            </span>
          </button>
        </span>
        <span
          className="KategorieFilter Bootstrap-buttons--active"
        >
          <button
            className="KategorieFilter--cyklo--inactive btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span>
              <img
                alt="cyklo"
                height={30}
                src="cyklo.png"
                title="cyklo"
              />
               
              cyklo
            </span>
          </button>
        </span>
        <span
          className="KategorieFilter Bootstrap-buttons--active"
        >
          <button
            className="KategorieFilter--koloběžka--inactive btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span>
              <img
                alt="koloběžka"
                height={30}
                src="kolobezka.png"
                title="koloběžka"
              />
               
              koloběžka
            </span>
          </button>
        </span>
        <span
          className="KategorieFilter Bootstrap-buttons--active"
        >
          <button
            className="KategorieFilter--pěší--inactive btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span>
              <img
                alt="pěší"
                height={30}
                src="pesi.png"
                title="pěší"
              />
               
              pěší
            </span>
          </button>
        </span>
      </div>
      <span
        className="Zobrazeno"
      >
        zobrazeno: 
        <span
          className="badge"
        >
          0
        </span>
      </span>
    </div>
  </div>
  <div
    className="withResponsive"
  >
    <div
      className="UcastniciTable_GridRow"
    >
      <div
        className="UcastniciTable_LeftSideGridContainer"
        style={
          Object {
            "flexBasis": "290px",
            "top": 0,
          }
        }
      >
        <div
          aria-label="grid"
          aria-readonly={true}
          className="ReactVirtualized__Grid UcastniciTable_HeaderGrid"
          id={undefined}
          onScroll={[Function]}
          role="grid"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": 35,
              "overflowX": "hidden",
              "overflowY": "hidden",
              "position": "relative",
              "width": 290,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        >
          <div
            className="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style={
              Object {
                "height": 35,
                "maxHeight": 35,
                "maxWidth": 290,
                "overflow": "hidden",
                "pointerEvents": "",
                "position": "relative",
                "width": 290,
              }
            }
          >
            <div
              className="UcastniciTable_headerCell"
              style={
                Object {
                  "height": 35,
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": 100,
                }
              }
            >
              <a
                className="SortHeader_a"
                onClick={[Function]}
              >
                příjmení
                 
                
              </a>
            </div>
            <div
              className="UcastniciTable_headerCell"
              style={
                Object {
                  "height": 35,
                  "left": 100,
                  "position": "absolute",
                  "top": 0,
                  "width": 90,
                }
              }
            >
              <a
                className="SortHeader_a"
                onClick={[Function]}
              >
                jméno
                 
                
              </a>
            </div>
            <div
              className="UcastniciTable_headerCell"
              style={
                Object {
                  "height": 35,
                  "left": 190,
                  "position": "absolute",
                  "top": 0,
                  "width": 100,
                }
              }
            >
              <a
                className="SortHeader_a"
                onClick={[Function]}
              >
                narození
                 
                
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        className="UcastniciTable_LeftSideGridContainer"
        style={
          Object {
            "flexBasis": "290px",
            "top": 35,
          }
        }
      >
        <div
          aria-label="grid"
          aria-readonly={true}
          className="ReactVirtualized__Grid UcastniciTable_LeftSideGrid"
          id={undefined}
          onScroll={[Function]}
          role="grid"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": 0,
              "overflowX": "auto",
              "overflowY": "hidden",
              "position": "relative",
              "width": 290,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        />
      </div>
      <div
        className="UcastniciTable_GridColumn"
      >
        <div>
          <div
            style={
              Object {
                "height": 35,
                "width": 910,
              }
            }
          >
            <div
              aria-label="grid"
              aria-readonly={true}
              className="ReactVirtualized__Grid UcastniciTable_HeaderGrid"
              id={undefined}
              onScroll={[Function]}
              role="grid"
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "boxSizing": "border-box",
                  "direction": "ltr",
                  "height": 35,
                  "overflowX": "hidden",
                  "overflowY": "hidden",
                  "position": "relative",
                  "width": 1200,
                  "willChange": "transform",
                }
              }
              tabIndex={0}
            >
              <div
                className="ReactVirtualized__Grid__innerScrollContainer"
                role="rowgroup"
                style={
                  Object {
                    "height": 35,
                    "maxHeight": 35,
                    "maxWidth": 1200,
                    "overflow": "hidden",
                    "pointerEvents": "",
                    "position": "relative",
                    "width": 1200,
                  }
                }
              >
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 290,
                      "position": "absolute",
                      "top": 0,
                      "width": 90,
                    }
                  }
                >
                  <a
                    className="SortHeader_a"
                    onClick={[Function]}
                  >
                    obec
                     
                    
                  </a>
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 380,
                      "position": "absolute",
                      "top": 0,
                      "width": 200,
                    }
                  }
                >
                  <a
                    className="SortHeader_a"
                    onClick={[Function]}
                  >
                    email
                     
                    
                  </a>
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 580,
                      "position": "absolute",
                      "top": 0,
                      "width": 110,
                    }
                  }
                >
                  <a
                    className="SortHeader_a"
                    onClick={[Function]}
                  >
                    přihlášení
                     
                    
                  </a>
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 690,
                      "position": "absolute",
                      "top": 0,
                      "width": 200,
                    }
                  }
                >
                  <a
                    className="SortHeader_a"
                    onClick={[Function]}
                  >
                    kategorie
                     
                    
                  </a>
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 890,
                      "position": "absolute",
                      "top": 0,
                      "width": 60,
                    }
                  }
                >
                  <a
                    className="SortHeader_a"
                    onClick={[Function]}
                  >
                    číslo
                     
                    
                  </a>
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 950,
                      "position": "absolute",
                      "top": 0,
                      "width": 150,
                    }
                  }
                >
                  kód
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 1100,
                      "position": "absolute",
                      "top": 0,
                      "width": 100,
                    }
                  }
                >
                  <a
                    className="SortHeader_a"
                    onClick={[Function]}
                  >
                    zaplaceno
                     
                    
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "height": 0,
                "width": 1200,
              }
            }
          >
            <div
              aria-label="grid"
              aria-readonly={true}
              className="ReactVirtualized__Grid UcastniciTable_BodyGrid"
              id={undefined}
              onScroll={[Function]}
              role="grid"
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "boxSizing": "border-box",
                  "direction": "ltr",
                  "height": 0,
                  "overflowX": "hidden",
                  "overflowY": "hidden",
                  "position": "relative",
                  "width": 1200,
                  "willChange": "transform",
                }
              }
              tabIndex={0}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
